# jejune_cli

./: .gitignore  Neo4jDatabase.sh  Readme.md  env-config  env-reference  env_reference  hatch_build.py  init.bash  jejune  jejune_cli-words.txt  pyproject.toml  treatments.sh
Doc/: MarkdownRegistryDesignNotes.md  Readme.md  workflow.puml
Testing/: .gitignore  Makefile  Readme.md
jejune_cli/: _env.py  build.py  catalog.py  configuration.py  configure.py  containers.py  convert.py  deploy.py  deployment.py  env.py  graph.py  graph_view.py  llm.py  llm_observability.py  main.py  neo4j.py  pdf_to_markdown.py  plugin.py  testing.py
jejune_cli/templates/: catalog-reference.yaml  catalog.yaml  env-config  env-reference  env-secrets
