[project]
name = "jejune-cli"
version = "0.1.0"
description = "jejuneness workflow CLI — configure, build and deploy knowledge graphs"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
jejune = "jejune_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jejune_cli"]
